--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Replace this</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-<body>
-    <div id="main-container">Test</div>
-</body>
-
+  <body>
+    <div class="header">
+      <input type="text" value="wroclaw" />
+      <button>search</button>
+    </div>
+    <div class="content hidden">
+      <img src="" alt="" />
+      <div>
+        <h1 class="city"></h1>
+        <p class="temperature">dd</p>
+        <p class="wind"></p>
+      </div>
+    </div>
+  </body>
 </html>
